# py-cursus-work

./: countries.csv  eelke_code_voor_pytest.py  firewall_logs.txt  frontend-flaskapp.html  ip_addr.csv  lala.md  lala.py  network_devices.txt  prog.py  progg2.py  progg3.py  progg4.py  pyproject.toml
course/: to_markdown.py
docs/: 00-course-screenshots-whiteboard.html  00-sequences-table.html  000-advanced-cheat-sheet.html  000-mega-cheat-sheet.html  01-title-topics.html  02-language-overview.html  03-installation-on-windows.html  04-interactive-console.html  05-string-and-variables.html  10-basic-types.html  11-1-match-case.html  11-control-structures-exercises-2.html  11-control-structures-exercises.html  11-control-structures-part-one.html  11-control-structures.html  12-lists-and-list-methods-exercises-2.html  12-lists-and-list-methods-exercises.html  12-lists-and-list-methods-slicing-exercises-3.html  12-lists.html  13-loops.html  13-milestone-exercises-2.html  13-milestone-exercises.html  14-dictionaries.html  15-other-datastructures-tuples-sets-etc.html  16-notes-on-converting-datatypes.html  17-functions-and-demystifying-them.html  18-working-with-file-paths.html  18-working-with-files-and-paths.html  19-working-with-files.html  20-working with-exceptions.html  21-creating-cli-tools.html  21-working-with-cli.html  22-working-with-rest-and-apis.html  40-advanced-datastructures.html  50-advanced-python-working-with-dbs-sqlite-sqlalchemy.html  control-structures-exercises-2.html  control-structures-exercises.html  creating-cli-tools-exercises.html  (+22 more)
(+123 files in other folders)
